# quick_ocr_doc_converter

./: .gitattributes  .gitignore  AI_AGENT_IMPLEMENTATION_PROMPT.md  BIDIRECTIONAL_FEATURES.md  CHANGELOG.md  CI_COMPATIBILITY_REPORT.md  CLEANUP_PLAN.md  CLEANUP_SUMMARY.md  CLI_TOOLS_GUIDE.md  CODEBASE_ANALYSIS_REPORT.md  CODEBASE_SECURITY_ANALYSIS_REPORT.md  COMPLETE_FEATURE_SUMMARY.md  COMPREHENSIVE_TEST_SUMMARY.md  COMPREHENSIVE_USER_GUIDE.md  DEPENDENCY_UPDATES_SUMMARY.md  DEVELOPMENT_SUMMARY.md  DISTRIBUTION_GUIDE.md  DISTRIBUTION_SUMMARY.md  DOCUMENTATION_COMPLETE.md  ENHANCED_TODO.md  FINAL_HANDOFF_SUMMARY.md  FINAL_TEST_SUMMARY.md  FUNCTIONALITY_VERIFICATION_REPORT.md  GOOGLE_VISION_SETUP.md  HANDOFF.md  HANDOFF_DOCUMENTATION.md  HANDOFF_ENHANCED_STYLING.md  HANDOFF_RESPONSIVE_LAYOUT.md  IMMEDIATE_ACTIONS.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_TODO.md  INSTALLATION_GUIDE.md  INSTALLATION_GUIDE_UPDATED.md  INSTALLATION_UPDATE.md  INSTALLER_UPDATE_SUMMARY.md  LEGACYBRIDGE_BUILD_SPEC.md  LEGACY_INTEGRATION_GUIDE.md  LICENSE  Launch_Ultimate.bat  (+225 more)
.claude.backup/: mcp.local.json  settings.local.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-releases.yml  ci.yml  pypi-publish.yml  release.yml
backends/: __init__.py  aws_textract.py  azure_vision.py  base.py  google_vision.py  manager.py
build_dll/: dll_wrapper.py  simple_dll_wrapper.py  universal_document_converter_ocr.py
build_dll/ocr_engine/: image_processor.py  ocr_engine.py  ocr_integration.py
build_installer/: LICENSE  README.md  requirements.txt  tray_app.py  universal_document_converter.py  version_info.txt
chocolatey/: ocr-document-converter.nuspec
chocolatey/tools/: chocolateyinstall.ps1
cli_test.rtf/: cli_test.rtf
config/: __init__.py  defaults.py
cross_platform/: __init__.py  linux_integration.py  macos_integration.py  windows_integration.py
dll_source/: Makefile  UniversalConverter32.def
docs/: CLI_REFERENCE.md  CROSS_PLATFORM_GUIDE.md  INSTALLATION_GUIDE.md  INSTALLATION_LINUX.md  INSTALLATION_MACOS.md  README.md  SETTINGS_CONFIGURATION_GUIDE.md  TROUBLESHOOTING_COMPLETE.md  USER_MANUAL.md  VFP9_VB6_COMPLETE_INTEGRATION_GUIDE.md  augment_convertor_app_info.md  quick_doc_convertor_agent.md  quick_doc_convertor_agent_2.md
document_converter/: main.py  requirements.txt
final_test.rtf/: test_comprehensive_final.rtf
final_test_roundtrip.md/: test_comprehensive_final.md
homebrew/: ocr-document-converter.rb
json_test.rtf/: json_test.rtf
legacy_dll_builder/: CLI_DOCUMENTATION.md  README.md  cli.py  cli_new.py  config.json.example  dll_builder_advanced_cli.py  dll_builder_cli.py  requirements.txt
legacy_dll_builder/dll_source/: UniversalConverter32.cpp  build_windows.bat
legacy_dll_builder/src/commands/: build.py  integration.py  testing.py
legacy_dll_builder/templates/: VB6_UniversalConverter_Production.bas  VFP9_UniversalConverter_Production.prg
lint_env/: pyvenv.cfg
monitoring/: __init__.py  cost_tracker.py
ocr_engine/: __init__.py  config_manager.py  format_detector.py  google_vision_backend.py  memory_processor.py  ocr_engine.py  ocr_engine_minimal.py  ocr_integration.py  secure_config.py  security.py
packaging/: build_linux.py  build_macos.py  build_windows.py
packaging_build/: __init__.py  build_macos.py
security/: __init__.py  credentials.py  validator.py
test_cli_output.rtf/: test_cli.rtf
test_env/: pyvenv.cfg
test_output.rtf/: test.rtf
tests/: __init__.py  conftest.py  pytest.ini  test_backends.py  test_base.py  test_cost_tracking.py  test_fixtures.py  test_gui.py  test_integration.py  test_integration_legacy.py  test_integration_main.py  test_performance.py  test_security.py  utils.py
utils/: safe_input.py
vb6_vfp9_integration/: README.md  UniversalConverter32.py  VB6_Example.vb  VFP9_Example.prg  build_dll.bat
